// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Links type snapshot test 1`] = `
<div
  className="list-actions"
/>
`;

exports[`Links type snapshot test 2`] = `
<div
  className="list-actions"
>
  <a
    className="btn btn-sm btn-link"
    href="/view/"
  >
    View
  </a>
</div>
`;

exports[`Links type snapshot test 3`] = `
<div
  className="list-actions"
>
  <a
    className="btn btn-sm btn-link"
    href="/edit/"
  >
    Edit
  </a>
</div>
`;

exports[`Links type snapshot test 4`] = `
<div
  className="list-actions"
>
  <a
    className="btn btn-sm btn-link"
    href="/view/"
  >
    View
  </a>
  <span>
     
  </span>
  <a
    className="btn btn-sm btn-link"
    href="/edit/"
  >
    Edit
  </a>
</div>
`;
